@@ -15,6 +15,8 @@
 	* lspci.man: Document `<?>' and also mention that extended config
 	space is currently available only with the linux_sysfs back-end.
 
+	* lspci.c: Decode the Debug port capability (per EHCI 0.96 spec).
+
 2007-10-14  Martin Mares <mj@ucw.cz>
 
 	* lib/[fno]bsd-*: Removed extraneous braces.
